[package]
name = "tank_launcher_module"
version = "0.0.1"
edition = "2021"
description = "Tank Launcher Module! A fast and safe Minecraft Launcher Module!!"
license = "MIT"
authors = ["xphost"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.116"  # 解析JSON
sysinfo = "0.30.11"  # 获取系统内存信息
reqwest = {version = "0.12.4", features = ["blocking"]}  # 网络请求
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }  # 异步模块
walkdir = "2.5.0"  # 遍历文件夹
regex = "1.10.5"  # 使用正则表达式
rust-crypto = "0.2.36"  # 使用各种加密，包括sha1和md5
base64 = "0.22.1"  # 使用base64加密数据
winit = "0.20.0"  # 获取屏幕宽高
hex = "0.4.3"  # 编写16进制数据
zip = "2.1.3"  # 解压zip

# 以下是手动库

# lazy_static = "1.4.0"  # 使static变量需要用时再初始化
# chrono = "0.4.38"  # 获取系统时间
# winapi = { version = "0.3.9", features = ["winuser"] }  # 调用winapi
dirs = "5.0.1"  # 获取AppData
rust-ini = "0.21.0"  # 调用ini
rpassword = "7.3.1"  # 写入密码（外置登录时要用）