[package]
name = "tank_launcher_module"
version = "0.0.1"
edition = "2021"
description = "Tank Launcher Module! A fast and safe Minecraft Launcher Module!!"
license = "MIT"
authors = ["xphost"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]

# 以下是必需库（部分类库仅限Windows，如果你有更好的选择，请向作者进行联系！）

serde_json = "1.0.116"  # 解析JSON
sysinfo = "0.30.11"  # 获取系统内存信息
reqwest = {version = "0.12.4", features = ["blocking"]}  # 网络请求
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }  # 异步模块
walkdir = "2.5.0"  # 遍历文件夹
regex = "1.10.5"  # 使用正则表达式
rust-crypto = "0.2.36"  # 使用各种加密，包括sha1和md5
base64 = "0.22.1"  # 使用base64加密数据
winit = "0.20.0"  # 获取屏幕宽高
zip = "2.1.3"  # 解压zip
quick-xml = { version = "0.36.1", features = ["async-tokio"] }  # 解析xml
encoding_rs = "0.8.34"  # 将字符串转编码（GBK to UTF-8）如果你不需要防止大聪明玩家，可以不装这个库，然后在程序里面把get_file函数改成read_to_string即可。

# 以下是可选库

pelite = "0.10.0"  # 可选库，用于获取exe的版本以及位数。通常用于获取Java的版本和位数。
# 该库仅限Windows，如果你需要跨平台，请向作者提出建议，并附赠你的代码！
# 如果不需要此类库，你需要删除rust_lib里的【main_mod: get_file_bit与get_file_version两个函数。】

# 以下是手动库

# lazy_static = "1.4.0"  # 使static变量需要用时再初始化
# chrono = "0.4.38"  # 获取系统时间
# winapi = { version = "0.3.9", features = ["winuser"] }  # 调用winapi
dirs = "5.0.1"  # 获取AppData
rust-ini = "0.21.0"  # 调用ini
rpassword = "7.3.1"  # 写入密码（外置登录时要用）
ansi_term = "0.12.1"  # 控制台颜色
winreg = "0.52.0"  # 读取Windows注册表
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
clipboard = "0.5.0"  # 剪切板函数
indicatif = "0.17.8"  # 进度条库